--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
           </header>
           <video autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
-            <source src="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Home%20Page/welcome.mp4" type="video/mp4">
+            <source src= "Home Page/welcome.mp4" type="video/mp4">
             This browser does not support HTML5.
             </video>
             
@@ -337,12 +337,12 @@
             </div>
             <div>
               <a
-                href="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Videos/RenderedCinTown.mp4"
+                href="./Videos/RenderedCinTown.mp4"
                 class="lightbox-link"
                 data-title="Unreal Engine 4 Cinematic: TOWN"
               >
               <video width="100%" autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
-                <source src="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Videos/RenderedCinTown.mp4" type="video/mp4">
+                <source src="./Videos/RenderedCinTown.mp4" type="video/mp4">
                 This browser does not support HTML5.
                 </video>
               </a>
