--- a/index.html
+++ b/index.html
@@ -337,12 +337,12 @@
             </div>
             <div>
               <a
-                href="./Videos/RenderedCinTown.mp4"
+                href="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/domportfolio/Videos/RenderedCinTown.mp4"
                 class="lightbox-link"
                 data-title="Unreal Engine 4 Cinematic: TOWN"
               >
               <video width="100%" autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
-                <source src="./Videos/RenderedCinTown.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/domportfolio/Videos/RenderedCinTown.mp4" type="video/mp4">
                 This browser does not support HTML5.
                 </video>
               </a>
