--- a/index.html
+++ b/index.html
@@ -301,36 +301,36 @@
           <div class="owl-carousel owl-theme" id="carousel4">
             <div>
               <a
-                href="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Videos/bouncing_ball_project.mp4"
+                href="./Videos/bouncing_ball_project.mp4"
                 class="lightbox-link"
                 data-title="Bouncing Ball"
               >
               <video width="100%" autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
-                <source src="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Videos/bouncing_ball_project.mp4" type="video/mp4">
+                <source src="./Videos/bouncing_ball_project.mp4" type="video/mp4">
                 This browser does not support HTML5.
                 </video>
               </a>
             </div>
             <div>
               <a
-                href="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Videos/RenderedCinWater.mp4"
+                href="./Videos/RenderedCinWater.mp4"
                 class="lightbox-link"
                 data-title="Unreal Engine 4 Cinematic: WATERFALL"
               >
               <video width="100%" autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
-                <source src="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Videos/RenderedCinWater.mp4" type="video/mp4">
+                <source src="./Videos/RenderedCinWater.mp4" type="video/mp4">
                 This browser does not support HTML5.
                 </video>
               </a>
             </div>
             <div>
               <a
-                href="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Videos/RenderedCinBeach.mp4"
+                href="./Videos/RenderedCinBeach.mp4"
                 class="lightbox-link"
                 data-title="Unreal Engine 4 Cinematic: BEACH"
               >
               <video width="100%" autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
-                <source src="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/main/Videos/RenderedCinBeach.mp4" type="video/mp4">
+                <source src="./Videos/RenderedCinBeach.mp4" type="video/mp4">
                 This browser does not support HTML5.
                 </video>
               </a>
