--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
           </header>
           <video autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
-            <source src= "https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/domportfolio/Home%20Page/welcome.mp4" type="video/mp4">
+            <source src= "https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/domportfolio/main/Home%20Page/welcome.mp4" type="video/mp4">
             This browser does not support HTML5.
             </video>
             
@@ -342,7 +342,7 @@
                 data-title="Unreal Engine 4 Cinematic: TOWN"
               >
               <video width="100%" autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
-                <source src="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/domportfolio/Videos/RenderedCinTown.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/the-True-Blue/the-True-Blue.github.io/domportfolio/main/Videos/RenderedCinTown.mp4" type="video/mp4">
                 This browser does not support HTML5.
                 </video>
               </a>
