--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 
     </div>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <!-- 
+     <br class="spazio">
+    <br class="spazio">
+    <br class="spazio">
+    <br class="spazio">-->
+    <br class="spazio"> 
+    <br class="spazio"> 
     <div class="icon-banner">
       <i class="fa-solid fa-gamepad fa-4x"></i>
       <h1>
@@ -395,8 +395,8 @@
         <h1> hi<span>!</span> </h1>
         <h2> Here's who I am & what I do </h2>
         <div class="about-btns">
-          <button type="button" class="btn btn-pink" id="open-resume">resume</button>
-          <button type="button" class="btn btn-white">projects</button>
+          <button type="button" class="btns btn-pink" id="open-resume">resume</button>
+          <button type="button" class="btns btn-white">projects</button>
         </div>
         <div class="about-para">
           <p>I am excited and eager to travel the world to experience different cultures and environments. I want to spread my knowledge of Game 
