--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         />
       </div>
       
-      <div class="section-sub">
+      <div class="section-sub" id="itch">
         <div class="game-wrapper">
           <div class="game-anim-title">
         <h1 id="game">itch.io games portfolio</h2>
@@ -396,7 +396,7 @@
         <h2> Here's who I am & what I do </h2>
         <div class="about-btns">
           <button type="button" class="btns btn-pink" id="open-resume">resume</button>
-          <button type="button" class="btns btn-white">projects</button>
+          <button type="button" class="btns btn-white" id="open-portfolio">projects</button>
         </div>
         <div class="about-para">
           <p>I am excited and eager to travel the world to experience different cultures and environments. I want to spread my knowledge of Game 
@@ -435,6 +435,10 @@
     <div id="contact-holder" class="popup popup-fullscreen">
       <button class="go-back"><i class="fa-solid fa-circle-arrow-right"></i></button>
       <iframe src="Contact/contact.html"></iframe>
+    </div>
+    <div id="portfolio-holder" class="popup popup-fullscreen">
+      <button class="go-back"><i class="fa-solid fa-circle-arrow-right"></i></button>
+      <iframe src="portfolio.html"></iframe>
     </div>
   </body>
 </html>
