--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
 
           </header>
-          <video autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
+          <video autoplay="" muted="" loop="" class="mtz-vlc-cnlog" playsinline autoplay loop muted>
             <source src= "https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Home%20Page/welcome.mp4" type="video/mp4">
             This browser does not support HTML5.
             </video>
@@ -106,29 +106,29 @@
       <h1>
         <span class="blend-text">GAMES, ART & MORE </span>
 
-        <video autoplay loop muted>
+        <video playsinline autoplay loop muted>
           <source src="Home Page/animated.mp4" type="video/mp4" />
           <source src="Home Page/animated.webm" type="video/webm" />
           <source src="Home Page/animated.ogv" type="video/ogg" />
         </video>
-        <video autoplay loop muted>
+        <video playsinline autoplay loop muted>
           <source src="Home Page/animated.mp4" type="video/mp4" />
           <source src="Home Page/animated.webm" type="video/webm" />
           <source src="Home Page/animated.ogv" type="video/ogg" />
         </video>
-        <video autoplay loop muted>
-          <source src="Home Page/animated.mp4" type="video/mp4" />
-          <source src="Home Page/animated.webm" type="video/webm" />
-          <source src="Home Page/animated.ogv" type="video/ogg" />
-        </video>
-
-        <video autoplay loop muted>
+        <video playsinline autoplay loop muted>
           <source src="Home Page/animated.mp4" type="video/mp4" />
           <source src="Home Page/animated.webm" type="video/webm" />
           <source src="Home Page/animated.ogv" type="video/ogg" />
         </video>
 
-        <video autoplay loop muted>
+        <video playsinline autoplay loop muted>
+          <source src="Home Page/animated.mp4" type="video/mp4" />
+          <source src="Home Page/animated.webm" type="video/webm" />
+          <source src="Home Page/animated.ogv" type="video/ogg" />
+        </video>
+
+        <video playsinline autoplay loop muted>
           <source src="Home Page/animated.mp4" type="video/mp4" />
           <source src="Home Page/animated.webm" type="video/webm" />
           <source src="Home Page/animated.ogv" type="video/ogg" />
@@ -321,7 +321,7 @@
                 class="lightbox-link"
                 data-title="Bouncing Ball"
               >
-              <video width="100%" autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
+              <video width="100%" class="mtz-vlc-cnlog" playsinline autoplay loop muted>
                 <source src="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/bouncing_ball_project.mp4" type="video/mp4">
                 This browser does not support HTML5.
                 </video>
@@ -333,7 +333,7 @@
                 class="lightbox-link"
                 data-title="Unreal Engine 4 Cinematic: WATERFALL"
               >
-              <video width="100%" autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
+              <video width="100%" class="mtz-vlc-cnlog" playsinline autoplay loop muted>
                 <source src="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/RenderedCinWater.mp4" type="video/mp4">
                 This browser does not support HTML5.
                 </video>
@@ -345,7 +345,7 @@
                 class="lightbox-link"
                 data-title="Unreal Engine 4 Cinematic: BEACH"
               >
-              <video width="100%" autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
+              <video width="100%" class="mtz-vlc-cnlog" playsinline autoplay loop muted>
                 <source src="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/RenderedCinBeach.mp4" type="video/mp4">
                 This browser does not support HTML5.
                 </video>
@@ -357,7 +357,7 @@
                 class="lightbox-link"
                 data-title="Unreal Engine 4 Cinematic: TOWN"
               >
-              <video width="100%" autoplay="" muted="" loop="" class="mtz-vlc-cnlog">
+              <video width="100%" class="mtz-vlc-cnlog" playsinline autoplay loop muted>
                 <source src="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/RenderedCinTown.mp4" type="video/mp4">
                 This browser does not support HTML5.
                 </video>
