--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
                 <p>This is my game design portfolio where I have created both 3D and 2D games both in Unity and GameMaker Studio 2.
                     These are uploaded on itch.io, a website made for game developers to advertise their work. 
                 </p>
-                <a href="./index.html#itch">read more</a>
+                <a href="https://tempest-digital.io#itch">read more</a>
             </div>
         </div>
 
@@ -38,7 +38,7 @@
             <div class="content">
                 <h3>project 02</h3>
                 <p>This is a character model I made in Autodesk Maya and rendered in Arnold.</p>
-                <a href="#">read more</a>
+                <a href="https://tempest-digital.io#">read more</a>
             </div>
         </div>
        
