--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
             <div class="content">
                 <h3>project 02</h3>
                 <p>This is a character model I made in Autodesk Maya and rendered in Arnold.</p>
-                <a href="https://tempest-digital.io#">read more</a>
+                <a href="https://tempest-digital.io#modeling">read more</a>
             </div>
         </div>
        
@@ -49,7 +49,7 @@
                 <p>I designed a 3D interior space using Autodesk Maya and added some visual effects in the rendered images using Photoshop.
                     These were rendered in Arnold.
                 </p>
-                <a href="#">read more</a>
+                <a href="https://tempest-digital.io#interior">read more</a>
             </div>
         </div>
 
@@ -57,8 +57,8 @@
             <img src="Images/graphic-design.png" alt="">
             <div class="content">
                 <h3>project 04</h3>
-                <p>LThese are various artworks digitally drawn in Photoshop.</p>
-                <a href="#">read more</a>
+                <p>These are various artworks digitally drawn in Photoshop.</p>
+                <a href="https://tempest-digital.io#art">read more</a>
             </div>
         </div>
 
@@ -69,7 +69,7 @@
                 <p>These are animated scenes created and rendered in Autodesk Maya and Unreal Engine 4. Additional video editing using Premiere
                     Pro was done with sound mixing along with some transitions and visual effects. 
                 </p>
-                <a href="#">read more</a>
+                <a href="https://tempest-digital.io#animation">read more</a>
             </div>
         </div>
 
@@ -80,6 +80,6 @@
 </section>
 
 <!-- portfolio section ends -->
-<script src="./portfolio_script.js"></script>
+
 </body>
 </html>
