--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         <h2> Here's who I am & what I do </h2>
         <div class="about-btns">
           <button type="button" class="btns btn-pink" id="open-resume">resume</button>
-          <a href= "portfolio.html"> <button type="button" class="btns btn-white"> projects</button> </a>
+          <a href= "./portfolio/portfolio.html"> <button type="button" class="btns btn-white"> projects</button> </a>
         </div>
         <div class="about-para">
           <p>I am excited and eager to travel the world to experience different cultures and environments. I want to spread my knowledge of Game 
