--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -23,7 +23,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="Images/game-design.png" alt="">
+            <img src="../Images/game-design.png" alt="">
             <div class="content">
                 <h3>project 01</h3>
                 <p>This is my game design portfolio where I have created both 3D and 2D games both in Unity and GameMaker Studio 2.
@@ -34,7 +34,7 @@
         </div>
 
         <div class="box">
-            <img src="Images/character_modelling.png" alt="">
+            <img src="../Images/character_modelling.png" alt="">
             <div class="content">
                 <h3>project 02</h3>
                 <p>This is a character model I made in Autodesk Maya and rendered in Arnold.</p>
@@ -43,7 +43,7 @@
         </div>
        
         <div class="box">
-            <img src="Images/interior.png" alt="">
+            <img src="../Images/interior.png" alt="">
             <div class="content">
                 <h3>project 03</h3>
                 <p>I designed a 3D interior space using Autodesk Maya and added some visual effects in the rendered images using Photoshop.
@@ -54,7 +54,7 @@
         </div>
 
         <div class="box">
-            <img src="Images/graphic-design.png" alt="">
+            <img src="../Images/graphic-design.png" alt="">
             <div class="content">
                 <h3>project 04</h3>
                 <p>These are various artworks digitally drawn in Photoshop.</p>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="box">
-            <img src="Images/animation.png" alt="">
+            <img src="../Images/animation.png" alt="">
             <div class="content">
                 <h3>project 05</h3>
                 <p>These are animated scenes created and rendered in Autodesk Maya and Unreal Engine 4. Additional video editing using Premiere
