--- a/Final Project/FinalProject.html
+++ b/Final Project/FinalProject.html
@@ -385,6 +385,8 @@
       </div>
       <h4>Loading</h4>
     </div>
+
+    <!--mobile-->
     <div class="start-screen">
       <h1>
         sonic the <br> hedgehog <br />
@@ -397,6 +399,9 @@
           </div>
         </div>
       </button>
+
+      <a href="../index.html"> <button class="button" id="btn-back">BACK TO HOME</button></a>
+      
     </div>
     <div class="BgAudios">
       <audio src="./audio/Sonic 1 Jingle.mp3"></audio>
