--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
   </head>
 
   <body>
-   
+    <style>
+      html, body {
+      scroll-behavior: smooth
+      }
+      </style>
     <div class="container">
       <div class="gradient">
         <div class="wrapper">
@@ -425,7 +429,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="./script.js"></script>
+    <script src="./script.js?v=0.1"></script>
+    ?v=15
     <script type="text/javascript" src="./mobile.JS"></script>
 
     <div id="resume-holder" class="popup">
