--- a/Project presentation/index.html
+++ b/Project presentation/index.html
@@ -22,6 +22,16 @@
         { once: true }
       );
   </script>
+
+  <img src="razzo.gif" alt="razzo" id="razzo" onclick='OpenLink()'>
+  <style>
+   #razzo{
+     cursor: pointer;
+     margin-left: 10px;
+     margin-top: 10px;
+   }
+  </style>
+
     <div class="title">
       <img src="title.png" style="width: 350px" />
     </div>
@@ -1328,5 +1338,13 @@
         });
     </script>
 
+
+  <script>
+  function OpenLink() {
+
+    window.open("https://the-true-blue.github.io", "_self");
+    
+  }
+</script>
   </body>
 </html>
