--- a/Project presentation/index.html
+++ b/Project presentation/index.html
@@ -1342,7 +1342,7 @@
   <script>
   function OpenLink() {
 
-    window.open("https://the-true-blue.github.io", "_self");
+    window.open("https://tempest-digital.io", "_self");
     
   }
 </script>
