--- a/Final Project/FinalProject.html
+++ b/Final Project/FinalProject.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Preview</title>
-    <link rel="stylesheet" href="FP_style.css" />
+    <link rel="stylesheet" href="FP_style.css?v=0.3" />
   </head>
   <body>
     <h1>Click to Launch Animation</h1>
@@ -566,6 +567,6 @@
       <audio src="./audio/Edge of Existence.mp3"></audio>
       <audio src="./audio/Sonic Terminal Velocity.mp3"></audio>
     </div>
-    <script src="./FP_script.js"></script>
+    <script src="./FP_script.js?v=0.2"></script>
   </body>
 </html>
