--- a/Project presentation/index.html
+++ b/Project presentation/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>NetArtPrez</title>
     <!-- this is a comment. A human can read it but the browser can not. -->
-    <link rel="stylesheet" type="text/css" href="theStyle.css" />
+    <link rel="stylesheet" type="text/css" href="theStyle1.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
 
@@ -23,7 +23,7 @@
       );
   </script>
 
-  <img src="razzo.gif" alt="razzo" id="razzo" onclick='OpenLink()'>
+  <img src="razzo.gif?v=0.1" alt="razzo" id="razzo" onclick='OpenLink()'>
   <style>
    #razzo{
      cursor: pointer;
