--- a/Project presentation/page1.html
+++ b/Project presentation/page1.html
@@ -2,7 +2,7 @@
   <head>
     <title>Page1 Overview</title>
     <!-- this is a comment. A human can read it but the browser can not. -->
-    <link rel="stylesheet" type="text/css" href="theStyle.css" />
+    <link rel="stylesheet" type="text/css" href="theStyle.css?v=0.3" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
   </head>
@@ -29,7 +29,7 @@
         ><img src="img1.png"
       /></a>
       <div class="text-block">
-        <h1>Description</h1>
+        <h1 style="display:flex;justify-content: center;">Description</h1>
         <p>
           When a new text is read for the first time on the Rhizome website, it
           appears on StarryNight as a dim star. Each time a text gets read
