--- a/Project presentation/page2.html
+++ b/Project presentation/page2.html
@@ -24,7 +24,7 @@
         { once: true }
       );
   </script>
-    <h1>Artists</h1>
+    <h1 style="display:flex;">Artists </h1>
     <div class="container1">
       <div>
         <a href="https://steinhardt.nyu.edu/people/alexander-galloway"
