--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@
         <h2> Here's who I am & what I do </h2>
         <div class="about-btns">
           <button type="button" class="btns btn-pink" id="open-resume">resume</button>
+          <a class="btns btn-pink" href="./Resume/resume.html" id="link"> resume </a>
           <a href= "./portfolio/portfolio.html"> <button type="button" class="btns btn-white"> projects</button> </a>
         </div>
         <div class="about-para">
