--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game Design, Art and More</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" type="image/x-icon" href="./Images/tempest.png"
     <script
       src="https://kit.fontawesome.com/5567ee3541.js"
       crossorigin="anonymous"
