--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <br class="spazio">
     <br class="spazio">
     <div class="icon-banner">
-      <i class="fa-solid fa-gamepad fa-4x"></i>
+      <img src="./Images/tempest.png" alt="image" width="100" height="100">
       <h1>
         <span class="blend-text">GAMES, ART & MORE </span>
 
