--- a/index.html
+++ b/index.html
@@ -114,31 +114,21 @@
         <span class="blend-text">GAMES, ART & MORE </span>
 
         <video playsinline autoplay loop muted>
-          <source src="Home Page/animated.mp4" type="video/mp4" />
-          <source src="Home Page/animated.webm" type="video/webm" />
-          <source src="Home Page/animated.ogv" type="video/ogg" />
+          <source src="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Home%20Page/animated.mp4"type="video/mp4" />
         </video>
         <video playsinline autoplay loop muted>
-          <source src="Home Page/animated.mp4" type="video/mp4" />
-          <source src="Home Page/animated.webm" type="video/webm" />
-          <source src="Home Page/animated.ogv" type="video/ogg" />
+          <source src="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Home%20Page/animated.mp4"type="video/mp4" />
         </video>
         <video playsinline autoplay loop muted>
-          <source src="Home Page/animated.mp4" type="video/mp4" />
-          <source src="Home Page/animated.webm" type="video/webm" />
-          <source src="Home Page/animated.ogv" type="video/ogg" />
+          <source src="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Home%20Page/animated.mp4"type="video/mp4" />
         </video>
 
         <video playsinline autoplay loop muted>
-          <source src="Home Page/animated.mp4" type="video/mp4" />
-          <source src="Home Page/animated.webm" type="video/webm" />
-          <source src="Home Page/animated.ogv" type="video/ogg" />
+          <source src="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Home%20Page/animated.mp4"type="video/mp4" />
         </video>
 
         <video playsinline autoplay loop muted>
-          <source src="Home Page/animated.mp4" type="video/mp4" />
-          <source src="Home Page/animated.webm" type="video/webm" />
-          <source src="Home Page/animated.ogv" type="video/ogg" />
+          <source src="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Home%20Page/animated.mp4"type="video/mp4" />
         </video>
 
       </h1>
