--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game Design, Art and More</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./CSS Files/styles.css">
     <link rel="icon" type="image/x-icon" href="./Images/tempest.png">
     <script
       src="https://kit.fontawesome.com/5567ee3541.js"
@@ -39,7 +39,7 @@
     />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./header.css" type="text/css">
+    <link rel="stylesheet" href="./CSS Files/header.css" type="text/css">
 
   </head>
 
@@ -318,7 +318,7 @@
               class="lightbox-link"
               data-title="Bouncing Ball"
             >
-            <img width="100%" class="mtz-vlc-cnlog" src="bouncing_ball_project.gif" >
+            <img width="100%" class="mtz-vlc-cnlog" src="./Images/bouncing_ball_project.gif" >
 
             </a>
           </div>
@@ -328,7 +328,7 @@
               class="lightbox-link"
               data-title="Unreal Engine 4 Cinematic: WATERFALL"
             >
-                          <img width="100%" class="mtz-vlc-cnlog" src="RenderedCinWater.gif" >
+                          <img width="100%" class="mtz-vlc-cnlog" src="./Images/RenderedCinWater.gif" >
             </a>
           </div>
           <div>
@@ -337,7 +337,7 @@
               class="lightbox-link"
               data-title="Unreal Engine 4 Cinematic: BEACH"
             >
-                          <img width="100%" class="mtz-vlc-cnlog" src="RenderedCinBeach.gif" >
+                          <img width="100%" class="mtz-vlc-cnlog" src="./Images/RenderedCinBeach.gif" >
             </a>
           </div>
           <div>
@@ -346,7 +346,7 @@
               class="lightbox-link"
               data-title="Unreal Engine 4 Cinematic: TOWN"
             >
-                          <img width="100%" class="mtz-vlc-cnlog" src="RenderedCinTown.gif" >
+                          <img width="100%" class="mtz-vlc-cnlog" src="./Images/RenderedCinTown.gif" >
 
             </a>
           </div>
@@ -413,8 +413,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="./script.js?v=15"></script>
-    <script type="text/javascript" src="./mobile.JS"></script>
+    <script src="./JS Files/script.js?v=15"></script>
+    <script type="text/javascript" src="./JS Files/mobile.JS"></script>
 
     <div id="resume-holder" class="popup">
       <button class="go-back"><i class="fa-solid fa-circle-arrow-right"></i></button>
