--- a/index.html
+++ b/index.html
@@ -205,6 +205,27 @@
                 <img src="./3D_model/Side.jpg" alt="image" />
               </a>
             </div>
+            <div class="item">
+              <a href="./3D_model/bottom_front.png" class="lightbox-link" data-title="Side">
+                <img src="./3D_model/bottom_front.png" alt="image" />
+              </a>
+            </div>
+            <div class="item">
+              <a href="./3D_model/Front View.jpg" class="lightbox-link" data-title="Side">
+                <img src="./3D_model/Front View.jpg" alt="image" />
+              </a>
+            </div>
+            <div class="item">
+              <a href="./3D_model/Back View.jpg" class="lightbox-link" data-title="Side">
+                <img src="./3D_model/Back View.jpg" alt="image" />
+              </a>
+            </div>
+            <div class="item">
+              <a href="./3D_model/side_view.png" class="lightbox-link" data-title="Side">
+                <img src="./3D_model/side_view.png" alt="image" />
+              </a>
+            </div>
+            
           </div>
           <div class="interior-wrapper">
             <div class ="interior-anim-title">
