--- a/index.html
+++ b/index.html
@@ -372,6 +372,22 @@
             </a>
           </div>
       </div>
+      <div class="WIP-wrapper">
+        <div class="WIP-anim-title">
+      <h1 id="WIP">3D Animation</h1>
+      </div>
+      </div>
+      <div class="owl-carousel owl-theme" id="carousel5">
+        <div>
+          <a
+            href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/bouncing_ball_projectadd .mp4"
+            class="lightbox-link"
+            data-title="Bouncing Ball"
+          >
+          <img width="100%" class="mtz-vlc-cnlog" src="./Images/bouncing_ball_project.gif" >
+
+          </a>
+        </div>
     </div>
   </section>
 
