--- a/index.html
+++ b/index.html
@@ -374,20 +374,21 @@
       </div>
       <div class="WIP-wrapper">
         <div class="WIP-anim-title">
-      <h1 id="WIP">3D Animation</h1>
+      <h1 id="WIP">Work-In Progress</h1>
       </div>
       </div>
-      <div class="owl-carousel owl-theme" id="carousel5">
+      <div class="owl-carousel owl-theme" id="carousel">
         <div>
           <a
             href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/GameplayShowcasePart1.mp4"
             class="lightbox-link"
-            data-title="Bouncing Ball"
+            data-title="Fan-Game Gameplay"
           >
-          <img width="100%" class="mtz-vlc-cnlog" src="./Images/bouncing_ball_project.gif" >
+          <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart1.gif" >
 
           </a>
         </div>
+    </div>
     </div>
   </section>
 
