--- a/index.html
+++ b/index.html
@@ -382,7 +382,17 @@
           <a
             href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/GameplayShowcasePart1.mp4"
             class="lightbox-link"
-            data-title="Fan-Game Gameplay"
+            data-title="Senior Design Project: Gameplay SHOWCASE"
+          >
+          <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart1.gif" >
+
+          </a>
+        </div>
+        <div>
+          <a
+            href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/GameplayShowcasePart2.mp4"
+            class="lightbox-link"
+            data-title="Senior Design Project: Gameplay SHOWCASE Part 2"
           >
           <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart1.gif" >
 
