--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
       <h1 id="WIP">Work-In Progress</h1>
       </div>
       </div>
-      <div class="owl-carousel owl-theme" id="carousel">
+      <div class="owl-carousel owl-theme" id="carousel4">
         <div>
           <a
             href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/GameplayShowcasePart1.mp4"
@@ -394,7 +394,7 @@
             class="lightbox-link"
             data-title="Senior Design Project: Gameplay SHOWCASE Part 2"
           >
-          <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart1.gif" >
+          <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart2.gif" >
 
           </a>
         </div>
