--- a/index.html
+++ b/index.html
@@ -188,40 +188,40 @@
                 class="lightbox-link"
                 data-title="Front"
               >
-                <img src="./3D_model/Front.png" alt="image" />
+                <img src="./3D_model/Front.png" alt="Sonic The Hedgehog Model: Front Pose" />
               </a>
             </div>
             <div class="item">
               <a
                 href="./3D_model/Perspective Back.jpg"
                 class="lightbox-link"
-                data-title="Perspective Back"
+                data-title="Sonic The Hedgehog Model: Back Pose"
               >
                 <img src="./3D_model/Perspective Back.jpg" alt="image" />
               </a>
             </div>
             <div class="item">
-              <a href="./3D_model/Side.jpg" class="lightbox-link" data-title="Side">
+              <a href="./3D_model/Side.jpg" class="lightbox-link" data-title="Sonic The Hedgehog Model: Side Pose">
                 <img src="./3D_model/Side.jpg" alt="image" />
               </a>
             </div>
             <div class="item">
-              <a href="./3D_model/bottom_front.png" class="lightbox-link" data-title="Side">
+              <a href="./3D_model/bottom_front.png" class="lightbox-link" data-title="Zbrush Pumpkin Character: Bottom Up Pose">
                 <img src="./3D_model/bottom_front.png" alt="image" />
               </a>
             </div>
             <div class="item">
-              <a href="./3D_model/Front View.jpg" class="lightbox-link" data-title="Side">
+              <a href="./3D_model/Front View.jpg" class="lightbox-link" data-title="Zbrush Pumpkin Character: Front Pose">
                 <img src="./3D_model/Front View.jpg" alt="image" />
               </a>
             </div>
             <div class="item">
-              <a href="./3D_model/Back View.jpg" class="lightbox-link" data-title="Side">
+              <a href="./3D_model/Back View.jpg" class="lightbox-link" data-title="Zbrush Pumpkin Character: Back Pose">
                 <img src="./3D_model/Back View.jpg" alt="image" />
               </a>
             </div>
             <div class="item">
-              <a href="./3D_model/side_view.png" class="lightbox-link" data-title="Side">
+              <a href="./3D_model/side_view.png" class="lightbox-link" data-title="Zbrush Pumpkin Character: Side Pose">
                 <img src="./3D_model/side_view.png" alt="image" />
               </a>
             </div>
@@ -237,7 +237,7 @@
               <a
                 href="./3d_space/space1.png"
                 class="lightbox-link"
-                data-title="space1"
+                data-title="The Legend of Zelda: Living Room Attack"
               >
                 <img src="./3d_space/space1.png" alt="image" />
               </a>
@@ -246,7 +246,7 @@
               <a
                 href="./3d_space/space2.png"
                 class="lightbox-link"
-                data-title="space2"
+                data-title="The Legend of Zelda: Close Up"
               >
                 <img src="./3d_space/space2.png" alt="image" />
               </a>
@@ -255,7 +255,7 @@
               <a
                 href="./3d_space/space3.png"
                 class="lightbox-link"
-                data-title="space3"
+                data-title="The Legend of Zelda: Fireplace"
               >
                 <img src="./3d_space/space3.png" alt="image" />
               </a>
@@ -289,7 +289,7 @@
               <a
                 href="./2DArt/Concentration 1.png"
                 class="lightbox-link"
-                data-title="Concentration 1"
+                data-title="Heaven Hands"
               >
                 <img src="./2DArt/Concentration 1.png" alt="image" />
               </a>
@@ -307,7 +307,7 @@
               <a
                 href="./2DArt/Merging of Galaxies 5.png"
                 class="lightbox-link"
-                data-title="Merging of Galaxies 5"
+                data-title="Merging of Galaxies"
               >
                 <img src="./2DArt/Merging of Galaxies 5.png" alt="image" />
               </a>
