--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -37,7 +37,10 @@
             <img src="../Images/character_modelling.png" alt="">
             <div class="content">
                 <h3>project 02</h3>
-                <p>This is a character model I made in Autodesk Maya and rendered in Arnold.</p>
+                <p>Two character models I made with Autodesk Maya and Zbrush then rendered in Arnold.
+                    The Sonic model was made solely in Maya then rendered in Arnold. The pumpkin
+                    model was sculpted in Zbrush and then rendered in Arnold using Maya. 
+                </p>
                 <a href="https://tempest-digital.io#modeling">read more</a>
             </div>
         </div>
