Update html source

--- a/index.html
+++ b/index.html
@@ -389,13 +389,12 @@
           </a>
         </div>
         <div>
-          <a
-            href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/GameplayShowcasePart2.mp4"
-            class="lightbox-link"
+          <a href="#" 
+            class="lightbox-link" 
+            data-video-url="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/GameplayShowcasePart2.mp4" 
             data-title="Senior Design Project: Gameplay SHOWCASE Part 2"
           >
-          <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart2.gif" >
-
+          <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart2.gif">
           </a>
         </div>
     </div>
