--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
             href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/GameplayShowcasePart1.mp4"
             class="lightbox-link"
             data-title="Senior Design Project: Gameplay SHOWCASE"
+            onclick="openVideoPopup(this)"
           >
           <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart1.gif" >
 
