--- a/index.html
+++ b/index.html
@@ -383,17 +383,17 @@
             href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/GameplayShowcasePart1.mp4"
             class="lightbox-link"
             data-title="Senior Design Project: Gameplay SHOWCASE"
-            onclick="openVideoPopup(this)"
           >
           <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart1.gif" >
 
           </a>
         </div>
         <div>
-          <a href="#" 
+          <a href="javascript:openVideoPopup(this)" 
             class="lightbox-link" 
             data-video-url="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/GameplayShowcasePart2.mp4" 
             data-title="Senior Design Project: Gameplay SHOWCASE Part 2"
+            onclick="openVideoPopup(this)"
           >
           <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart2.gif">
           </a>
