--- a/index.html
+++ b/index.html
@@ -335,9 +335,10 @@
         <div class="owl-carousel owl-theme" id="carousel4">
           <div>
             <a
-              href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/bouncing_ball_project.mp4"
+              href="./Videos/bouncing_ball_project.mp4"
               class="lightbox-link"
               data-title="Bouncing Ball"
+              data-video="bouncing_ball_project.mp4"
             >
             <img width="100%" class="mtz-vlc-cnlog" src="./Images/bouncing_ball_project.gif" >
 
@@ -345,27 +346,30 @@
           </div>
           <div>
             <a
-              href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/RenderedCinWater.mp4"
+              href="./Videos/RenderedCinWater.mp4"
               class="lightbox-link"
               data-title="Unreal Engine 4 Cinematic: WATERFALL"
+              data-video="RenderedCinWater.mp4"
             >
                           <img width="100%" class="mtz-vlc-cnlog" src="./Images/RenderedCinWater.gif" >
             </a>
           </div>
           <div>
             <a
-              href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/RenderedCinBeach.mp4"
+              href="./Videos/RenderedCinBeach.mp4"
               class="lightbox-link"
               data-title="Unreal Engine 4 Cinematic: BEACH"
+              data-video="RenderedCinBeach.mp4"
             >
                           <img width="100%" class="mtz-vlc-cnlog" src="./Images/RenderedCinBeach.gif" >
             </a>
           </div>
           <div>
             <a
-              href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/RenderedCinTown.mp4"
+              href="./Videos/RenderedCinTown.mp4"
               class="lightbox-link"
               data-title="Unreal Engine 4 Cinematic: TOWN"
+              data-video="RenderedCinTown.mp4"
             >
                           <img width="100%" class="mtz-vlc-cnlog" src="./Images/RenderedCinTown.gif" >
 
@@ -380,19 +384,20 @@
       <div class="owl-carousel owl-theme" id="carousel4">
         <div>
           <a
-            href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/GameplayShowcasePart2.mp4"
+            href="./Videos/GameplayShowcasePart1.mp4"
             class="lightbox-link"
-            id="popup-link"
             data-title="Senior Design Project: Gameplay SHOWCASE Part 1"
+            data-video="GameplayShowcasePart1.mp4"
           >
           <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart1.gif" >
 
           </a>
         </div>
         <div>
-          <a href="https://media.githubusercontent.com/media/the-True-Blue/domportfolio/main/Videos/GameplayShowcasePart2.mp4" 
+          <a href="./Videos/GameplayShowcasePart2.mp4"
             class="lightbox-link"  
             data-title="Senior Design Project: Gameplay SHOWCASE Part 2"
+            data-video="GameplayShowcasePart2.mp4"
           >
           <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart2.gif">
           </a>
