--- a/index.html
+++ b/index.html
@@ -394,15 +394,16 @@
           </a>
         </div>
         <div>
-          <a href="./Videos/GameplayShowcasePart2.mp4"
+          <a href="https://youtu.be/HGdTSO5WBwk"
             class="lightbox-link"  
             data-title="Senior Design Project: Gameplay SHOWCASE Part 2"
-            data-video="GameplayShowcasePart2.mp4"
+            data-video="HGdTSO5WBwk"
           >
           <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart2.gif">
           </a>
         </div>
     </div>
+    <div id="overlay"></div> <!-- Add the overlay element -->
     </div>
   </section>
 
