--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
           </a>
         </div>
         <div>
-          <a href="https://youtu.be/HGdTSO5WBwk"
+          <a href="https://www.youtube.com/embed/HGdTSO5WBwk"
             class="lightbox-link"  
             data-title="Senior Design Project: Gameplay SHOWCASE Part 2"
             data-video="HGdTSO5WBwk"
