--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
           <h1 id="animation">3D Animation</h1>
         </div>
         </div>
-        <div class="owl-carousel owl-theme" id="carousel4">
+        <div class="owl-carousel owl-theme" id="carousel4a">
           <div>
             <a
               href="./Videos/bouncing_ball_project.mp4"
@@ -381,7 +381,7 @@
       <h1 id="WIP">Work-In Progress</h1>
       </div>
       </div>
-      <div class="owl-carousel owl-theme" id="carousel4">
+      <div class="owl-carousel owl-theme" id="carousel4b">
         <div>
           <a
             href="./Videos/GameplayShowcasePart1.mp4"
@@ -394,7 +394,7 @@
           </a>
         </div>
         <div>
-          <a href="https://www.youtube.com/embed/HGdTSO5WBwk"
+          <a href="https://www.youtube.com/embed/HGdTSO5WBwk?autoplay=1"
             class="lightbox-link"  
             data-title="Senior Design Project: Gameplay SHOWCASE Part 2"
             data-video="HGdTSO5WBwk"
@@ -468,6 +468,8 @@
     ></script>
     <script src="./JS Files/script.js?v=15"></script>
     <script type="text/javascript" src="./JS Files/mobile.JS"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
+
 
     <div id="resume-holder" class="popup">
       <button class="go-back"><i class="fa-solid fa-circle-arrow-right"></i></button>
