popup_link_FINISHED

--- a/index.html
+++ b/index.html
@@ -384,10 +384,10 @@
       <div class="owl-carousel owl-theme" id="carousel4b">
         <div>
           <a
-            href="./Videos/GameplayShowcasePart1.mp4"
+            href="https://www.youtube.com/embed/RgeSWx8a12w?autoplay=1"
             class="lightbox-link"
             data-title="Senior Design Project: Gameplay SHOWCASE Part 1"
-            data-video="GameplayShowcasePart1.mp4"
+            data-video="RgeSWx8a12w"
           >
           <img width="100%" class="mtz-vlc-cnlog" src="./Images/GameplayShowcasePart1.gif" >
 
